2017-01-23         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawkextlib.spec.in: Many changes to comply with Fedora standards.
	Replace tabs with blanks.
	(Group): Remove.
	(Source0): Rename to Source.
	(BuildRequires): Replace /usr/include/gawkapi.h with gawk-devel.
	(_hardened_build): Set "%global _hardened_build 1".
	(%package, %description, %files): Remove unnecessary "-n %{name}-".
	(%prep): Replace "%setup -q" with "%autosetup".
	(%install): Remove pointless "rm -rf %{buildroot}", and
	replace "%makeinstall" with "%make_install".
	(%files): Remove "%defattr(-,root,root,-)".
	(%doc): Remove README.

2016-07-30         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawkextlib.spec.in: Use %{url} in Source0.

2016-07-23         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawkextlib.spec.in: Upgrade to Fedora requirements.

2016-07-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawkextlib.spec.in: Fix some rpmlint complaints.

2013-09-12         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawklib.spec.in: The gawk 4.1 Fedora packaging does not use a separate
	gawk-devel rpm, so instead of depending on gawk-devel, we instead
	require /usr/include/gawkapi.h to be present.

2012-08-31         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawklib.spec.in: Replace xmlgawk with gawkextlib in a few more places.

2012-07-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawklib.spec.in: Rename to gawkextlib.spec.in.
	* gawkextlib.spec.in: Rename packages to use gawkextlib prefix
	instead of gawklib, and individual libraries will use a gawkext-
	prefix instead of gawk-.  Also add some more examples as doc files.
	* .gitignore: Replace gawklib.spec with gawkextlib.spec.

2012-07-21         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawklib.spec.in: Fix %setup command, and gawklib-devel now requires
	gawk-devel.
